--- a/minesweeper/src/styles/style.css
+++ b/minesweeper/src/styles/style.css
@@ -45,9 +45,29 @@
 }
 
 .container__field {
+    position: relative;
     width: fit-content;
     display: grid;
     gap: 1px;
+}
+
+.field__pregame {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    font-size: 30px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(2, 2, 0, .3);
+    color: whitesmoke;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
 .container__button {
