--- a/minesweeper/src/styles/style.css
+++ b/minesweeper/src/styles/style.css
@@ -52,7 +52,7 @@
 }
 
 .container__help-panel {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -67,11 +67,39 @@
 }
 
 .panel__duration {
+    display: block;
     padding: 10px;
     font-weight: 700;
     text-align: center;
     width: 50%;
 }
+
+.panel__marker {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.panel__marker p{
+    text-align: center;
+    margin: 0;
+}
+
+.panel__marker img {
+    text-align: center;
+    padding: 10px;
+    width: 20px;
+    background-color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.panel__marker img:hover {
+    opacity: .7;
+}
+
 
 .field__pregame {
     box-sizing: border-box;
